# LR6

./: CMakeLists.txt  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h  main.cpp
tests/: CMakeLists.txt  test  test.cpp
